--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cffi==1.15.0
 charset-normalizer==2.0.7
 click==8.0.3
 colorama==0.4.4
+diskcache==5.2.1
 dnspython==2.1.0
 email-validator==1.1.3
 fastapi==0.70.0
