--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 aiohttp==3.8.1
 aiosignal==1.2.0
+aiosqlite==0.17.0
 anyio==3.3.4
 asgiref==3.4.1
 async-timeout==4.0.2
+asyncpg==0.26.0
 attrs==21.4.0
 bcrypt==3.2.0
 certifi==2021.10.8
@@ -10,30 +12,45 @@ cffi==1.15.0
 charset-normalizer==2.0.7
 click==8.0.3
 colorama==0.4.4
+cryptography==37.0.4
 diskcache==5.2.1
 dnspython==2.1.0
+ecdsa==0.18.0
 email-validator==1.1.3
 fastapi==0.70.0
-frozenlist==1.3.0
+fastapi-users==10.1.5
+fastapi-users-db-sqlalchemy==4.0.3
 fluent-logger==0.10.0
+frozenlist==1.3.0
+greenlet==1.1.3
 h11==0.12.0
 httptools==0.2.0
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.2
+makefun==1.14.0
 MarkupSafe==2.0.1
+msgpack==1.0.4
 multidict==6.0.2
 orjson==3.6.7
+passlib==1.7.4
+psycopg2==2.9.3
+pyasn1==0.4.8
 pycparser==2.20
 pycryptodome==3.11.0
 pydantic==1.8.2
+PyJWT==2.4.0
 python-dotenv==0.19.1
+python-jose==3.3.0
 python-multipart==0.0.5
 PyYAML==5.4.1
 requests==2.26.0
+rsa==4.9
 sentry-sdk==1.5.10
 six==1.16.0
 sniffio==1.2.0
+SQLAlchemy==1.4.40
+sqlalchemy-cockroachdb==1.4.3
 sqlitedict==1.7.0
 starlette==0.16.0
 timeflake==0.4.2
