--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ email-validator==1.1.3
 fastapi==0.70.0
 fastapi-users==10.1.5
 fastapi-users-db-sqlalchemy==4.0.3
+fastapi-utils==0.2.1
 fluent-logger==0.10.0
 frozenlist==1.3.0
 greenlet==1.1.3
