--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,17 @@
-aiohttp==3.9.2
-aiosignal==1.2.0
-aiosqlite==0.17.0
-asgiref==3.4.1
-async-timeout==4.0.2
-asyncpg==0.26.0
-attrs==21.4.0
+aiohttp[speedups]
 bcrypt==3.2.0
-cffi==1.15.0
-charset-normalizer==2.0.7
-click==8.0.3
-colorama==0.4.4
 diskcache==5.2.1
-dnspython==2.1.0
-email-validator==1.1.3
-fastapi==0.109.1
+fastapi==0.115.12
 fastapi-users==10.1.5
 fastapi-users-db-sqlalchemy==4.0.3
 fastapi-utils==0.2.1
 fluent-logger==0.10.0
-frozenlist==1.3.0
-greenlet==1.1.3
-h11==0.12.0
-httptools==0.2.0
-itsdangerous==2.0.1
 Jinja2==3.1.3
-makefun==1.14.0
-MarkupSafe==2.0.1
-msgpack==1.0.4
-multidict==6.0.2
-passlib==1.7.4
-psycopg2==2.9.3
-pyasn1==0.4.8
-pycparser==2.20
-pydantic==1.8.2
-PyJWT==2.4.0
+psycopg2-binary
 python-dotenv==0.19.1
-python-jose==3.3.0
-requests==2.31.0
-rsa==4.9
-sentry-sdk==1.14.0
-six==1.16.0
-sniffio==1.2.0
+python-jose==3.4.0
+requests==2.32.0
+sentry-sdk==2.8.0
 SQLAlchemy==1.4.40
 sqlalchemy-cockroachdb==1.4.3
 sqlitedict==1.7.0
