--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,36 @@
+[project]
+name = "du-attend-v2-server"
+version = "2.1.1"
+description = "대구대 강의실에서 QR 코드 기반 전자출결을 더 편리하게 도와주는 웹 서비스"
+readme = "README.md"
+requires-python = "~=3.9.0"
+dependencies = [
+    "aiohttp[speedups]>=3.12.14",
+    "bcrypt==3.2.0",
+    "diskcache==5.2.1",
+    "fastapi==0.115.12",
+    "fastapi-users==10.1.5",
+    "fastapi-users-db-sqlalchemy==4.0.3",
+    "fastapi-utils==0.2.1",
+    "fluent-logger==0.10.0",
+    "httpx==0.28.1",
+    "jinja2==3.1.3",
+    "psycopg2-binary>=2.9.10",
+    "pycryptodome==3.19.1",
+    "pytest==8.3.5",
+    "python-dotenv==0.19.1",
+    "python-jose==3.4.0",
+    "requests>=2.32.4",
+    "sentry-sdk==2.24.1",
+    "setuptools==78.1.0",
+    "sqlalchemy==1.4.40",
+    "sqlalchemy-cockroachdb==1.4.3",
+    "sqlitedict==1.7.0",
+    "timeflake==0.4.2",
+    "ujson==5.4.0",
+    "uvicorn==0.15.0",
+]
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = "test_*.py"
