compose 에서 환경변수로 포트 수정할 수 있게 변경

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     platform: ${DOCKER_PLATFORM:-linux/amd64}
 #    build: .
     ports:
-     - "20003:8000"
+     - "${SERVER_OPEN_PORT:-20003}:8000"
     volumes:
       - ./db/promotion:/app/promotion_db/
       - ./db/user:/app/user_db/
